# speaklift

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0144ba5aca6b_upgrade_question_bank_metadata.py  02e119cac187_create_interview_answers_table.py  3b9580228d87_add_answer_evaluations.py  90113a0a09f2_add_jsonb_ai_profile_data.py  9b2bf41d3a41_add_foreign_keys_to_interviewsession.py  b9758a2d75da_remove_education_and_target_role_from_.py  bd4b041b5ffe_create_interview_evaluations_table.py  c1e2f3a4b5d6_create_resumes_table.py  d43422b04a8a_add_execution_path_to_interview_.py  f079a2ceb3e0_create_users_and_profiles_tables.py  f0f592e2c169_initial_schema.py
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/core/: config.py  database.py  exception_handlers.py  logging.py  nlp.py  security.py  storage.py
backend/app/db/: session.py
backend/app/dependencies/: ai.py  auth.py  database.py  engine.py  storage.py
backend/app/middleware/: correlation.py  rate_limit.py  security.py  size_limit.py
backend/app/models/: __init__.py  answer_evaluation.py  interview_answer.py  interview_evaluation.py  interview_question.py  interview_session.py  job_description.py  profile.py  question_bank.py  resume.py  user.py
backend/app/repositories/: answer_evaluation_repository.py  interview_answer_repository.py  interview_evaluation_repository.py  interview_question_repository.py  interview_session_repository.py  job_description_repository.py  question_bank_repository.py  resume_repository.py  user_repository.py
backend/app/schemas/: auth.py  interview_answer.py  interview_evaluation.py  interview_question.py  interview_session.py  job_description.py  resume.py
backend/app/services/: auth_service.py  interview_answer_service.py  interview_question_generator_service.py  interview_service.py  interview_session_service.py  interview_workflow_service.py  job_description_service.py  question_bank_service.py  resume_service.py
backend/app/shared/: enums.py  exceptions.py
backend/scripts/: seed_question_bank.py  smoke_test_ai.py  test_pydantic.py  test_question_generation.py
backend/scripts/question_bank/: __init__.py  ai_ml_engineer.py  backend_developer.py  cloud_engineer.py  common.py  data_scientist.py  devops_engineer.py  python_developer.py
backend/scripts/tools/: smoke_test_ai.py
backend/tests/api/: test_health.py  test_interview_sessions.py
backend/tests/core/: test_config.py  test_exception_handlers.py
backend/tests/document_processing/: __init__.py  test_section_detector.py  test_text_cleaner.py
backend/tests/evaluation/: test_statistics_feature_extractor.py  test_vocabulary_feature_extractor.py
backend/tests/middleware/: test_rate_limit.py  test_security.py  test_size_limit.py
backend/tests/nlp/: test_certification_extractor.py  test_contact_extractor.py  test_education_extractor.py  test_experience_extractor.py  test_extractors.py  test_normalizer.py  test_pipeline.py  test_project_extractor.py  test_skill_extractor.py  test_spacy_processor.py  (+1 more)
(+383 files in other folders)
