[project]
name = "speaklift"
version = "0.1.0"
description = "AI-Powered Interview & Viva Confidence Platform"
requires-python = ">=3.10,<3.11"

dependencies = [
"alembic>=1.18.4",
"email-validator>=2.3.0",
"fastapi>=0.137.1",
"passlib[bcrypt]>=1.7.4",
"psycopg[binary]>=3.3.4",
"pydantic-settings>=2.14.1",
"python-jose[cryptography]>=3.5.0",
"sqlalchemy>=2.0.51",
"uvicorn>=0.49.0",
]
