[project]
name = "speaklift"
version = "0.1.0"
description = "AI-Powered Interview & Viva Confidence Platform"
requires-python = ">=3.10,<3.11"

dependencies = [
    "alembic>=1.18.4",
    "bcrypt==3.2.2",
    "email-validator>=2.3.0",
    "fastapi>=0.137.1",
    "language-tool-python>=3.4.0",
    "nltk>=3.9.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.51",
    "textstat>=0.7.13",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
