[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aditya-121105", email = "kumarkhaniyaaditya123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
